# layout-manager-2

./: .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/release-notes/: v0.1.0-beta.1.md
.github/workflows/: ci.yml  release.yml
scripts/: enum-steam-windows.ps1  read-layout-db.py
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/application/: ancillary_panel_title.rs  client_window.rs  concurrent_launch.rs  durable_window.rs  execution_planner.rs  execution_service.rs  layout_service.rs  mod.rs  placement_executor.rs  post_launch.rs  transient_title.rs  transient_window.rs  unmatched_minimizer.rs  window_discovery_service.rs  window_matcher.rs  window_reuse.rs  window_service.rs
src-tauri/src/commands/: app_info.rs  execution.rs  layouts.rs  mod.rs  settings.rs  system.rs
src-tauri/src/domain/: execution.rs  geometry.rs  layout.rs  mod.rs  monitor.rs  placement.rs  ports.rs  settings.rs  window.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/browser/: arguments.rs  detection.rs  launcher.rs  mod.rs
src-tauri/src/infrastructure/persistence/: database.rs  mod.rs  settings_repository.rs  sqlite_layout_repository.rs
src-tauri/src/infrastructure/process/: launch_environment.rs  launch_executable.rs  mod.rs  spawn_detached.rs  windows_process_launcher.rs
src-tauri/src/infrastructure/windows/: controller.rs  mod.rs  monitors.rs  native_tests.rs  process.rs  process_tree.rs  windows.rs
src/app/: App.test.tsx  App.tsx  providers.tsx  router.tsx
src/components/layout/: app-layout.test.tsx  app-layout.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  toaster.tsx
src/features/execution/: execution-page.tsx  execution-report.test.ts
src/features/layouts/: layout-editor-page.tsx  layouts-page.test.tsx  layouts-page.tsx
src/features/settings/: settings-page.tsx
src/styles/: globals.css
src/test/: render.tsx  setup.ts
tests/e2e/: layout-workflow.test.tsx
(+35 files in other folders)
