[package]
name = "layout-manager-2"
version = "0.1.0"
description = "Windows workspace layout manager"
authors = ["Layout Manager 2 contributors"]
edition = "2024"

[lib]
name = "layout_manager_2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"

[dev-dependencies]
serde_json = "1.0.150"
