[package]
name = "layout-manager-2"
version = "0.1.0"
description = "Windows workspace layout manager"
authors = ["Layout Manager 2 contributors"]
edition = "2024"

[lib]
name = "layout_manager_2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
regex = "1.12.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_System_Threading", "Win32_System_ProcessStatus"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"

[dev-dependencies]
serde_json = "1.0.150"
